--- a/workflows/leetcode.yml
+++ b/workflows/leetcode.yml
@@ -6,22 +6,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-leetcode:
+  leetcode:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Generate LeetCode Stats
-        uses: lxy-yz/leetcode-stat-action@master
-        with:
-          username: omkartanajipatil
-          output: leetcode.svg
-
-      - name: Commit Changes
+      - name: Generate LeetCode badge
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          curl -s "https://leetcard.jacoblin.cool/omkartanajipatil?theme=dark&ext=heatmap" -o leetcode.svg
+
+      - name: Commit file
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
           git add leetcode.svg
-          git commit -m "Auto-update LeetCode stats" || echo "No changes"
+          git commit -m "Update leetcode.svg" || echo "No changes"
           git push
